# RCI_mppi_framework

./: .gitignore  README.md
mppi_framework/: README.md  pyproject.toml
mppi_framework/mppi_framework/: __init__.py
mppi_framework/mppi_framework/core/: registry.py
mppi_framework/mppi_framework/defaults/: mppi.py
mppi_framework/mppi_framework/defaults/costs/: __init__.py  composite.py  ee_goal.py  obstacle2d.py  obstacle3d.py  quadratic.py
mppi_framework/mppi_framework/defaults/dynamics/: cartpole.py  double_integrator.py  mobile2d.py  quadrotor3d.py
mppi_framework/mppi_framework/defaults/samplers/: __init__.py  gaussian.py  normal_lognormal.py  uniform.py
mppi_framework/mppi_framework/defaults/visualization/: __init__.py
mppi_framework/mppi_framework/defaults/visualization/offline/: __init__.py  cartpole_matplotlib.py  mobile2d_matplotlib.py  quadrotor3d_matplotlib.py
mppi_framework/mppi_framework/defaults/visualization/tools/: __init__.py  offline_recorder.py
mppi_framework/mppi_framework/examples/: cartpole_run.py  cartpole_run_nln.py  cartpole_run_uniform.py  mobile2d_run_gaussian.py  mobile2d_run_nln.py  mobile2d_run_uniform.py  quadrotor3d_run.py
mppi_framework/mppi_framework/interfaces/: dynamics.py  sampler.py  visualization.py
mppi_framework/mppi_framework/utils/: franka_dh_fk.py  plot_cartpole_data.py  plot_cartpole_x.py  plot_cost.py  plot_mobile2d_env.py  plot_noise.py  plot_trajectory.py  smoothers.py
ros2/: README.md
ros2/mppi_ros2/: package.xml  setup.cfg  setup.py
ros2/mppi_ros2/config/: mppi_viz.yaml  panda_mppi.yaml
ros2/mppi_ros2/launch/: franka_mppi.launch.py
ros2/mppi_ros2/mppi_ros2/: mppi_node.py  (+2 more)
ros2/mujoco_ros2/: package.xml  setup.py
ros2/robot_description/franka_description/: CMakeLists.txt  package.xml
ros2/robot_description/franka_description/robots/panda/: panda_nohand.urdf
ros2/robot_description/franka_description/robots/panda/xml/: mjx_panda_nohand.xml  mjx_scene.xml  panda.xml  panda_nohand.xml  scene.xml
ros2/robot_description/franka_description/rviz/: panda.rviz
(+5 files in other folders)
