<?xml version="1.0"?>
<package format="3">
  <name>franka_description</name>
  <version>0.10.1</version>
  <description>franka_description contains URDF files and meshes of Franka Robotics robots</description>
  <maintainer email="support@franka.de">Franka Robotics GmbH</maintainer>
  <license>Apache-2.0</license>

  <url type="website">http://wiki.ros.org/franka_description</url>
  <url type="repository">https://github.com/frankaemika/franka_ros</url>
  <url type="bugtracker">https://github.com/frankaemika/franka_ros/issues</url>

  <author email="support@franka.de">Franka Robotics GmbH</author>

  <!-- ROS 2 build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <exec_depend>xacro</exec_depend>

  <!-- Test-related dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <!-- Additional export if needed -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
